<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.RegisterBasicInfoActivity"
    android:background="?colorAppBackground"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/app_title"
        android:src="@drawable/ic_logo"
        android:layout_margin="10dp"
        android:contentDescription="@string/hint_app_logo"
        />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        android:text="@string/app_name"
        android:textColor="@color/almost_black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        android:fillViewport="true"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/txtBracuId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtName"
                android:hint="@string/hint_bracu_id"
                android:textAlignment="center"
                android:background="@drawable/ic_round_edit_text"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:inputType="number"
                android:autofillHints="BracuId"
                />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBracuId"
                app:layout_constraintBottom_toTopOf="@id/txtEmail"
                android:hint="@string/full_name_hint"
                android:textAlignment="center"
                android:background="@drawable/ic_round_edit_text"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:inputType="textCapWords"
                android:autofillHints="name"
                />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtName"
                app:layout_constraintBottom_toTopOf="@id/txtBirthDate"
                android:hint="@string/email_label"
                android:textAlignment="center"
                android:background="@drawable/ic_round_edit_text"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                />

            <EditText
                android:id="@+id/txtBirthDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtEmail"
                app:layout_constraintBottom_toTopOf="@id/txtPhone"
                android:hint="@string/date_of_birth_hint"
                android:textAlignment="center"
                android:background="@drawable/ic_round_edit_text"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:cursorVisible="false"
                android:focusable="false"
                android:autofillHints="Birthdate"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBirthDate"
                app:layout_constraintBottom_toTopOf="@id/txtProgram"
                android:hint="@string/phone_hint"
                android:textAlignment="center"
                android:background="@drawable/ic_round_edit_text"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:inputType="phone"
                android:autofillHints="phone"
                />

            <EditText
                android:id="@+id/txtProgram"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPhone"
                app:layout_constraintBottom_toTopOf="@id/txtSemester"
                android:hint="@string/department_program_label"
                android:textAlignment="center"
                android:background="@drawable/ic_round_edit_text"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:inputType="textCapWords|textAutoCorrect"
                android:autofillHints="Department|Program"
                />

            <EditText
                android:id="@+id/txtSemester"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtProgram"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/enrolled_semester_label"
                android:textAlignment="center"
                android:background="@drawable/ic_round_edit_text"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:inputType="textCapWords"
                android:autofillHints="Semester"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next_button_text"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>