<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="?colorAppBackground"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_logo"
        android:layout_margin="10dp"
        android:contentDescription="@string/hint_app_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/almost_black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/txtBracuId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_bracu_id"
            android:textAlignment="center"
            android:background="@drawable/ic_round_edit_text"
            android:layout_marginVertical="5dp"
            android:textSize="18sp"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_password"
            android:textAlignment="center"
            android:background="@drawable/ic_round_edit_text"
            android:layout_marginVertical="5dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Sign In"
            android:background="@drawable/ic_round_button"
            android:layout_marginVertical="5dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>